# docs/swagger.json
@@ -1378,10 +1378,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.CarCard"
-                            }
+                            "$ref": "#/definitions/models.CarCard"
                         }
                     },
                     "400": {
@@ -1562,7 +1559,7 @@
             }
         },
         "/me/update": {
-            "get": {
+            "put": {
                 "description": "Handler for getting a user by id",
                 "consumes": [
                     "application/json"
